--- a/web/styles.css
+++ b/web/styles.css
@@ -15,6 +15,8 @@ html, body {
   background-color: yellow;
   width: 100%;
 
+  -webkit-transition: -webkit-transform .2s cubic-bezier(.4,0,.2,1),opacity .2s cubic-bezier(.4,0,.2,1);
+  transition: transform .2s cubic-bezier(.4,0,.2,1),opacity .2s cubic-bezier(.4,0,.2,1);
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
