--- a/web/styles.css
+++ b/web/styles.css
@@ -43,6 +43,13 @@ html, body {
   width: 250px;
   background-color: rgba(65, 65, 68, 0.7);
   height: 100%;
+  transition: transform 0.1s cubic-bezier(0.47, 0, 0.75, 0.72),opacity .1s ease-out;
+}
+
+.side-panel .content {
+  height: 5000px;
+  overflow: scroll;
+  background:yellow;
 }
 
 .side-panel.hide {
@@ -65,4 +72,26 @@ html, body {
   margin-top: 75px;
   margin-bottom: 75px;
   text-align: center;
+}
+
+.noscroll {
+  overflow: hidden;
+  position: fixed;
+}
+
+.scrim.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.scrim {
+  visibility: hidden;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: opacity ease-in-out 0.38s, visibility ease-in-out 0.38s;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
